crates/interpreter/src/snapshots/submilli_engine__parser__tests__snapshot_function_declaration.snap
---
source: crates/interpreter/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Identifier(
                Ident {
                    name: "a",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 55,
                        end: 56,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 55,
                end: 56,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "b",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 59,
                        end: 60,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 59,
                end: 60,
            },
        },
        Expr {
            kind: Binary {
                op: Add,
                lhs: ExprId(
                    0,
                ),
                rhs: ExprId(
                    1,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 55,
                end: 60,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "sum",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 62,
                        end: 65,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 62,
                end: 65,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Let {
                name: Ident {
                    name: "sum",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 49,
                        end: 52,
                    },
                },
                ty: None,
                value: ExprId(
                    2,
                ),
                doc: None,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 45,
                end: 61,
            },
        },
        Stmt {
            kind: Expr(
                ExprId(
                    3,
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 62,
                end: 66,
            },
        },
        Stmt {
            kind: Block(
                [
                    StmtId(
                        0,
                    ),
                    StmtId(
                        1,
                    ),
                ],
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 43,
                end: 68,
            },
        },
        Stmt {
            kind: Function {
                name: Ident {
                    name: "add",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 9,
                        end: 12,
                    },
                },
                generics: [],
                params: [
                    ParamDecl {
                        name: Ident {
                            name: "a",
                            span: Span {
                                file: FileId(
                                    0,
                                ),
                                start: 13,
                                end: 14,
                            },
                        },
                        ty: Some(
                            TypeAnnotation {
                                kind: Name {
                                    name: Ident {
                                        name: "number",
                                        span: Span {
                                            file: FileId(
                                                0,
                                            ),
                                            start: 16,
                                            end: 22,
                                        },
                                    },
                                    args: [],
                                },
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 16,
                                    end: 22,
                                },
                            },
                        ),
                        default: None,
                        optional: false,
                        pattern: None,
                        rest: false,
                        modifiers: None,
                    },
                    ParamDecl {
                        name: Ident {
                            name: "b",
                            span: Span {
                                file: FileId(
                                    0,
                                ),
                                start: 24,
                                end: 25,
                            },
                        },
                        ty: Some(
                            TypeAnnotation {
                                kind: Name {
                                    name: Ident {
                                        name: "number",
                                        span: Span {
                                            file: FileId(
                                                0,
                                            ),
                                            start: 27,
                                            end: 33,
                                        },
                                    },
                                    args: [],
                                },
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 27,
                                    end: 33,
                                },
                            },
                        ),
                        default: None,
                        optional: false,
                        pattern: None,
                        rest: false,
                        modifiers: None,
                    },
                ],
                return_type: Some(
                    TypeAnnotation {
                        kind: Name {
                            name: Ident {
                                name: "number",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 36,
                                    end: 42,
                                },
                            },
                            args: [],
                        },
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 36,
                            end: 42,
                        },
                    },
                ),
                type_predicate: None,
                body: StmtId(
                    2,
                ),
                doc: None,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 68,
            },
        },
    ],
    top_level: [
        StmtId(
            3,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    parameter_bindings: {},
    for_of_pattern_bindings: {},
    for_pattern_init_bindings: {},
    exported_decls: [],
    implicit_initializers: {},
    synthetic_undefined: {},
    binding_defaults: {},
}
